<resources>
    <string-array name="lend_period_choices">
        <item>      </item>
        <item>Day(s)</item>
        <item>Week(s)</item>
        <item>Month()</item>
    </string-array>
    <string name="app_name">Lendsum</string>
    <string name="log_in">Log In</string>
    <string name="new_user">New User?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="email_or_phone">Email/Username/Phone</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome_msg">Welcome to Lendsum</string>
    <string name="create_profile">Create Profile</string>
    <string name="create_lendsum_profile">Create Lendsum Profile</string>
    <string name="not_a_new_user">Not a new user?</string>
    <string name="log_into_my_account">Log into my account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="create_new_profile">Create New Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="search_for_friends">Search for Friends</string>
    <string name="manage_payment_methods">Manage Payment Methods</string>
    <string name="settings">Settings</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="package_name">Package Name</string>
    <string name="item_list">Item List</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lend_indefinitely">Lend indefinitely</string>
    <string name="return_date">Return Date</string>
    <string name="create_package">Add Package</string>
    <string name="add_date">Add Date</string>
    <string name="indef_abbr">Indef</string>
    <string name="borrower_name">Borrower Name</string>
    <string name="borrower_email">Borrower Email</string>
    <string name="next">Next</string>
    <string name="addimagebtn">addImageBtn</string>
    <string name="close_button">close button</string>
    <string name="back">back</string>
    <string name="start_date">Start Date</string>
    <string name="lend_period">Lend for</string>
    <string name="rate">Rate</string>
    <string name="days">day</string>
    <string name="weeks">week</string>
    <string name="months">month</string>
</resources>
