<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navFriendSearch"
            android:icon="@drawable/ic_search_24dp"
            android:title="@string/search_for_friends" />
        <item
            android:id="@+id/navManagePayment"
            android:icon="@drawable/ic_payment_24dp"
            android:title="@string/manage_payment_methods" />
        <item
            android:id="@+id/navSettings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/navInviteFriends"
            android:icon="@drawable/ic_person_add_24dp"
            android:title="@string/invite_friends" />
        <item
            android:id="@+id/navHelp"
            android:icon="@drawable/ic_help_24dp"
            android:title="@string/help" />
        <item
            android:id="@+id/navLogout"
            android:icon="@drawable/ic_exit_to_app_24dp"
            android:title="@string/log_out" />
    </group>

</menu>