<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <android.support.constraint.Guideline
        android:id="@+id/verticalStartGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/verticalEndGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <EditText
        android:id="@+id/createProfFirstNameEditText"
        style="@style/CustomEditText"
        android:hint="@string/first_name"
        android:layout_marginTop="16dp"
        android:inputType="textPersonName"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toTopOf="@+id/createProfLastNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/createProfLastNameEditText"
        style="@style/CustomEditText"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/createProfEmailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createProfFirstNameEditText" />

    <EditText
        android:id="@+id/createProfEmailEditText"
        style="@style/CustomEditText"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/createProfPassEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createProfLastNameEditText" />

    <EditText
        android:id="@+id/createProfPassEditText"
        style="@style/CustomEditText"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/createProfNextBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createProfEmailEditText" />

    <Button
        android:id="@+id/createProfNextBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/next"
        android:textColor="@color/colorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createProfPassEditText" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createProfNextBtn" />

</android.support.constraint.ConstraintLayout>
