<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/imageFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ImageFragment"
    android:background="@android:color/white">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/verticalStartGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <android.support.constraint.Guideline
            android:id="@+id/verticalEndGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <android.support.constraint.Guideline
            android:id="@+id/horizontalStartGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp" />

        <android.support.constraint.Guideline
            android:id="@+id/horizontalEndGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="16dp" />

        <android.support.constraint.Guideline
            android:id="@+id/horizontal90Guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <ImageButton
            android:id="@+id/createPackImageCloseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:contentDescription="@string/close_button"
            android:src="@drawable/ic_close_black_24dp"
            app:layout_constraintEnd_toStartOf="@id/verticalEndGuide"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/verticalStartGuide"
            app:layout_constraintTop_toBottomOf="@id/horizontalStartGuide" />

        <GridView
            android:id="@+id/pictureGridView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:columnWidth="90dp"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            app:layout_constraintTop_toBottomOf="@+id/createPackImageCloseBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/horizontal90Guide">

        </GridView>

        <Button
            android:id="@+id/createPackNextBtn"
            style="@style/CustomDefaultButton"
            android:text="@string/next"
            app:layout_constraintBottom_toTopOf="@id/horizontalEndGuide"
            app:layout_constraintEnd_toStartOf="@+id/createPackSelectImgBtn"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal90Guide"
            app:layout_constraintVertical_bias="1"/>


        <ImageButton
            android:id="@id/createPackSelectImgBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:contentDescription="@string/addimagebtn"
            android:src="@drawable/ic_add_a_photo_color_primary_24dp"
            app:layout_constraintBottom_toBottomOf="@id/createPackNextBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/createPackNextBtn"
            app:layout_constraintTop_toTopOf="@id/createPackNextBtn" />

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>